Update Basic Molecular Dynamics.ipynb

--- a/Basic Molecular Dynamics.ipynb
+++ b/Basic Molecular Dynamics.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = mda.Universe('Data_files/GH26.pdb')"
+    "u = mda.Universe('Data_files/xyz.pdb')"
    ]
   },
   {
