--- a/ADC_optimize.ipynb
+++ b/ADC_optimize.ipynb
@@ -99,6 +99,7 @@
     }
    ],
    "source": [
+    "## This is the input format, and contains about 100 rows in this snippet\n",
     "input_df = pd.read_excel(\"temp.xlsx\", sheet_name=\"Sheet1\")\n",
     "input_df.head()"
    ]
@@ -204,13 +205,19 @@
    ],
    "source": [
     "##TODO needs further optimiation\n",
+    "\n",
+    "### The logic is as follows:\n",
+    "# Aggregating by Plnt and Material columns, one needs to take forward looking 3 months of cost.\n",
+    "# For eg for month 3, forward looking 3 months is 4,5,6. \n",
+    "# For this I then need to sum the total cost and that gives what is termed as Avg Daily consumption (ADC)\n",
     "def calc_3magg(row):\n",
     "    month_no = row['Month']\n",
     "    plant = row['Plnt']\n",
     "    mat = row['Material']\n",
     "    \n",
-    "    np3 = [month_no + 1, month_no + 2, month_no + 3]\n",
-    "\n",
+    "    np3 = [month_no + 1, month_no + 2, month_no + 3] \n",
+    "    \n",
+    "    #Here it needs to look up the entire data set for the grouping part and that is the killer. \n",
     "    m3sum = input_df.loc[(input_df['Plnt'] == plant) & (input_df['Material'] == mat) & (input_df['Month'].isin(np3))]['Total_cost'].agg('sum')\n",
     "   \n",
     "    return (m3sum)\n",
